--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -4,6 +4,7 @@
 common = <<-EOF
 sudo apt-get update
 sudo apt-get install -y openjdk-7-jre openssh-server python-dev python-virtualenv supervisor
+sudo apt-get install -y git s3cmd
 
 tar xzf /vagrant/apache-storm-0.9.3.tar.gz -C /opt
 cp /vagrant/storm.yaml /opt/apache-storm-0.9.3/conf/storm.yaml
