--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -15,7 +15,13 @@ sudo useradd -mU storm
 sudo -u storm mkdir /home/storm/.ssh
 sudo chmod 700 /home/storm/.ssh
 sudo cp /vagrant/sshkey.pub /home/storm/.ssh/authorized_keys
+sudo cp /vagrant/sshkey.pub /home/storm/.ssh/id_rsa.pub
+sudo cp /vagrant/sshkey /home/storm/.ssh/id_rsa
 sudo chown storm:storm /home/storm/.ssh/authorized_keys
+sudo chown storm:storm /home/storm/.ssh/id_rsa.pub
+sudo chown storm:storm /home/storm/.ssh/id_rsa
+sudo chmod 644 /home/storm/.ssh/id_rsa.pub
+sudo chmod 600 /home/storm/.ssh/id_rsa
 sudo -u storm mkdir /home/storm/virtualenv_root
 sudo chown -R storm:storm /opt/apache-storm-0.9.3
 
@@ -42,24 +48,24 @@ EOF
 
 Vagrant.configure(2) do |config|
 
-	# one nimbus
+  # one nimbus
   config.vm.define "nimbus" do |nimbus|
-		nimbus.vm.box = "chef/debian-7.6"
-		nimbus.vm.hostname = "nimbus"
-		nimbus.vm.network "private_network", ip: "192.168.56.2"
-		nimbus.vm.provision "shell", inline: common
-		nimbus.vm.provision "shell", inline: nimbus_setup
+	nimbus.vm.box = "chef/debian-7.6"
+	nimbus.vm.hostname = "nimbus"
+	nimbus.vm.network "private_network", ip: "192.168.56.2"
+	nimbus.vm.provision "shell", inline: common
+	nimbus.vm.provision "shell", inline: nimbus_setup
   end
-
-	# 3 worker boxes
-	(1..3).each do |i|
-		config.vm.define "worker#{i}" do |worker|
-			worker.vm.box = "chef/debian-7.6"
-			worker.vm.hostname = "worker#{i}"
-			worker.vm.network "private_network", ip: "192.168.56.#{i+2}"
-			worker.vm.provision "shell", inline: common
-			worker.vm.provision "shell", inline: worker_setup
-		end
+  
+  # 3 worker boxes
+  (1..3).each do |i|
+	config.vm.define "worker#{i}" do |worker|
+	  worker.vm.box = "chef/debian-7.6"
+	  worker.vm.hostname = "worker#{i}"
+	  worker.vm.network "private_network", ip: "192.168.56.#{i+2}"
+	  worker.vm.provision "shell", inline: common
+	  worker.vm.provision "shell", inline: worker_setup
 	end
+  end
 
 end
