--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -17,9 +17,11 @@ sudo chmod 700 /home/storm/.ssh
 sudo cp /vagrant/sshkey.pub /home/storm/.ssh/authorized_keys
 sudo cp /vagrant/sshkey.pub /home/storm/.ssh/id_rsa.pub
 sudo cp /vagrant/sshkey /home/storm/.ssh/id_rsa
+sudo cp /vagrant/sshconfig /home/storm/.ssh/config
 sudo chown storm:storm /home/storm/.ssh/authorized_keys
 sudo chown storm:storm /home/storm/.ssh/id_rsa.pub
 sudo chown storm:storm /home/storm/.ssh/id_rsa
+sudo chown storm:storm /home/storm/.ssh/config
 sudo chmod 644 /home/storm/.ssh/id_rsa.pub
 sudo chmod 600 /home/storm/.ssh/id_rsa
 sudo -u storm mkdir /home/storm/virtualenv_root
