--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -2,14 +2,12 @@
 # vi: set ft=ruby ts=2 sw=2 sts=2 :
 
 common = <<-EOF
+sudo sed -ri -e 's/ftp.uk.debian.org/ftp.us.debian.org/g' /etc/apt/sources.list
+
 sudo apt-get update
 sudo apt-get install -y openjdk-7-jre openssh-server python-dev python-virtualenv supervisor 
-
-sudo apt-get install -y git
-sudo apt-get install -y libxml2 libxml2-dev libxslt1-dev
-sudo apt-get install -y llvm-dev libedit-dev
+# sudo apt-get install -y git
 sudo apt-get install -y python-pip
-
 sudo pip install --upgrade pip
 
 tar xzf /vagrant/apache-storm-0.9.3.tar.gz -C /opt
@@ -53,7 +51,24 @@ sudo supervisorctl start storm-worker
 
 sudo chmod 755 /vagrant/src
 sudo chmod 644 /vagrant/src/*
+
+
+# sudo apt-get install -y libxml2 libxml2-dev libxslt1-dev
+
+# sudo pip install numpy
+# sudo pip install streamparse
+# sudo pip install enum34
+
+# sudo apt-get install -y llvm llvm-dev libedit-dev
+# sudo pip install llvmlite
+# sudo pip install funcsigs
+
+# sudo pip install numba
+
+# sudo rm /home/storm/virtualenv_root/matching/lib/python2.7/no-global-site-packages.txt
+
 EOF
+
 
 Vagrant.configure(2) do |config|
 
