--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -87,11 +87,14 @@ Vagrant.configure(2) do |config|
 	config.vm.define "worker#{i}" do |worker|
 	  #worker.vm.box = "chef/debian-7.6"
 	  worker.vm.box = "deb/jessie-amd64"
-	  worker.vm.hostname = "worker#{i}"
+      worker.vm.hostname = "worker#{i}"
 	  worker.vm.network "private_network", ip: "192.168.56.#{i+2}"
 	  worker.vm.provision "shell", inline: common
 	  worker.vm.provision "shell", inline: worker_setup
-	end
+      worker.vm.provider :virtualbox do |vb|
+        vb.customize ["modifyvm", :id, "--memory", "2048"]
+      end
+    end
   end
 
 end
